<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/diaper_activity_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:padding="16dp"
            android:text="Activities for this week"
            android:textColor="@color/sub_header"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="8dp"
            android:paddingTop="8dp" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="16dp"
                android:src="@drawable/ic_diaper_dry" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:text="@string/str_Poo"
                    android:textColor="@color/text_primary_dark"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/dry_total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:gravity="right"
                    android:text="@string/str_No_activity"
                    android:textColor="@color/text_secondary_dark"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/dry_last"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:gravity="right|center_vertical"
                    android:text="@string/str_No_activity"
                    android:textColor="@color/text_secondary_dark"
                    android:textSize="14sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="8dp"
            android:paddingTop="8dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="16dp"
                android:src="@drawable/ic_diaper_wet" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:text="@string/str_Pee"
                    android:textColor="@color/text_primary_dark"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/wet_total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:text="@string/str_No_activity"
                    android:textColor="@color/text_secondary_dark"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/wet_last"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:text="@string/str_No_activity"
                    android:textColor="@color/text_secondary_dark"
                    android:textSize="14sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="8dp"
            android:paddingTop="8dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="16dp"
                android:src="@drawable/ic_diaper_mix" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:text="@string/str_Pee_and_poo"
                    android:textColor="@color/text_primary_dark"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/mix_total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:text="@string/str_No_activity"
                    android:textColor="@color/text_secondary_dark"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/mix_last"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:text="@string/str_No_activity"
                    android:textColor="@color/text_secondary_dark"
                    android:textSize="14sp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/sub_header_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="16dp"
            android:background="@color/divider" />

        <TextView
            android:id="@+id/sub_header_today"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:padding="16dp"
            android:text="Wed, 27 Oct 2016"
            android:textColor="@color/sub_header"
            android:textSize="14sp" />

    </LinearLayout>

</LinearLayout>