<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="4dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="left"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:text="Diaper Type"
        android:textColor="@color/text_primary_pink"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_diaper_dry" />

        <Button
            android:id="@+id/dialog_choice_dry"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif"
            android:gravity="left|center_vertical"
            android:text="Poo"
            android:textColor="@color/text_primary_dark"
            android:textSize="24sp"
            android:theme="@style/FlatButton" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_diaper_wet" />

        <Button
            android:id="@+id/dialog_choice_wet"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif"
            android:gravity="left|center_vertical"
            android:text="Pee"
            android:textColor="@color/text_primary_dark"
            android:textSize="24sp"
            android:theme="@style/FlatButton" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_diaper_mix" />

        <Button
            android:id="@+id/dialog_choice_mixed"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif"
            android:gravity="left|center_vertical"
            android:text="Pee and poo"
            android:textColor="@color/text_primary_dark"
            android:textSize="24sp"
            android:theme="@style/FlatButton" />

    </LinearLayout>

</LinearLayout>