<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/sub_header_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="16dp"
                android:background="@color/divider" />

            <TextView
                android:id="@+id/sub_header_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:padding="16dp"
                android:text="Wed, 27 Oct 2016"
                android:textColor="@color/sub_header"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/entry_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:visibility="visible">

            <ImageView
                android:id="@+id/diaper_type_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="16dp"
                android:src="@drawable/ic_diaper_dry" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/diaper_type_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:text="@string/str_Pee"
                    android:textColor="@color/text_primary_dark"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/diaper_time_stamp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:gravity="right"
                    android:text="10.00 am"
                    android:textColor="@color/text_secondary_dark"
                    android:textSize="14sp" />

            </LinearLayout>

            <ImageView
                android:id="@+id/menu_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:padding="16dp"
                android:src="@drawable/ic_action_overflow" />

        </LinearLayout>

    </LinearLayout>

    <!--FOR AUTO TESTING ONLY, REMOVE THIS LAYOUT AFTER TESTING-->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="visible">

        <ImageButton
            android:id="@+id/diaper_entry_edit_debug"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:src="@drawable/ic_action_edit_button" />

        <ImageButton
            android:id="@+id/diaper_entry_delete_debug"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:src="@drawable/ic_action_cancel_dark" />

    </LinearLayout>

</LinearLayout>